Fix font contrast

--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,8 @@ All colors MUST be HSL.
     
     --secondary-light: 0 84% 90%;
 
-    --muted: 210 40% 96%;
-    --muted-foreground: 215 16% 47%;
+    --muted: 213 40% 30%;
+    --muted-foreground: 213 20% 80%;
 
     --accent: 0 84% 60%;
     --accent-foreground: 0 0% 100%;
